compilateurDeca/src/test/deca/syntax/invalid/sans_objet/float_underflow.deca
// Description: Test d'un flottant non nul trop petit (Underflow)
// Resultats: Ligne 4 : Littéral flottant hors limites
{
    float f = 1.0e-46; // Trop petit pour être représenté
}